@@ -1,3 +1,4 @@
+* Validate wizard definition on module tests
 * Remove order constraint on register ModelSQL
 * Add relate from report to translations
 
